generate_html_report.sh: Fixup title recentered when scollbar appear
The title text and separator are now included in a new div.
This div has a left padding equals to the scrollbar size, recentering
the content relative to the full browser view, scrollbar included.

--- a/bin/html_res/memcheck-cover.css
+++ b/bin/html_res/memcheck-cover.css
@@ -2,6 +2,11 @@
 |**    Header styles    **|
 \*************************/
 
+.report_header {
+    /* Prevent y scroll-bar recenter effect */
+    padding-left: calc(100vw - 100%);
+}
+
 /* HTML report title */
 .report_title {
     font-weight: bold;
